@@ -48,6 +48,8 @@ $wgMessageStructure = array(
 		'tog-watchlisthideown',
 		'tog-watchlisthidebots',
 		'tog-watchlisthideminor',
+		'tog-watchlisthideliu',
+		'tog-watchlisthideanons',
 		'tog-nolangconversion',
 		'tog-ccmeonemails',
 		'tog-diffonly',
@@ -1374,6 +1376,10 @@ $wgMessageStructure = array(
 		'watchlist-hide-own',
 		'watchlist-show-minor',
 		'watchlist-hide-minor',
+		'watchlist-show-anons',
+		'watchlist-hide-anons',
+		'watchlist-show-liu',
+		'watchlist-hide-liu',
 	),
 	'watching' => array(
 		'watching',
